--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
 
         <ul>
-          <li></li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+         <li>Control flow is the order in which a computer executes code in a script.</li>
           <li></li>
           <li></li>
         </ul>
